22.06.2001	bug fixes <garetxe@users.sf.net>

	* callbacks.c: fixed channel ordering, reported by n0mada@terra.es.
	* zconf.c: Fixed double free(), used xmlFree instead of g_free
	where appropiate.

15.06.2001	alirc, plugin properties <garetxe@users.sf.net>

	* src/plugin_common.h: Made plugin_add_properties a gboolean,
	returns TRUE if the plugins will add anything. gpb arg can be NULL.
	* plugins/alirc: integrated patch by Sjoerd Simons.
	* src/remote.c: Added load_page.

8.06.2001	color dialog <garetxe@users.sf.net>

	* glade/zapping.glade: Beautified ttx color dialog a bit.
	* pixmaps/*.xpm: Added con and brig used above, the rest in
	prevision for future use.

29.05.2001	<mschimek@users.sf.net>

	* list.h: double linked now
	* fifotest.c: added
	* yuv2rgb_mmx.c: added yuyv_rgba32, yuyv_rgb16

28.05.2001	alirc plugin <garetxe@users.sf.net>

	* plugins/alirc: 'Another lirc plugin', by Sjoerd Simons
	<sjoerd@air.luon.net>. Thanks! :-)

27.05.2001	MPEG fixes <garetxe@users.sf.net>

	* plugins/mpeg.c: Works now if Z's yuv pixformat is YUYV and
	capture isn't buffered push. Core when buffered push and lock with
	YVU420 (probably RGB too, untested). Probably bugs in plugin.c
	and capture.c.
	* glade/zapping.glade: Configurable Q/S tradeoff when doing the
	scaling of the TTX pages.

25.05.2001	<garetxe@users.sf.net>

	* plugins/screenshot: YVU420, TTX capture.

24.05.2001	<mschimek@users.sourceforge.net>

	* plugins/lirc/lirc.c: lirc_page fixed in plugin_add_properties

24.05.2001	Rolling headers <garetxe@users.sf.net>

	* src/zvbi.c: Rolling headers support (just the time field for the
	moment).

19.05.2001	Fullscreen <garetxe@users.sourceforge.net>

	* src/fullscreen.c: Made fullscreen usable under many heads.	

16.05.2001	<mschimek@users.sourceforge.net>

	* Fixed port_grabbed shortcut in xvz_grab_port.

14.05.2001	--yuv-format flag <garetxe@users.sourceforge.net>

	* src/main.c, capture.c, x11stuff.c: Added CLO [command line