@@ -20,7 +20,8 @@ Outstanding issues for the next release (0.6.0)
 	(for keyb navigation)
 	+ Key combos for lazy guys like me (channels + mute)
 	+ Fullscreen channel tips.
-	+ GUI improvements (channel selection, controls, toolbar...)
+	+ GUI improvements (channel selection, controls, toolbar...),
+	channel submenus.
 	+ Screenshot preview.
 	+ Get thumbnails of all tuned channels.
 	+ --roottv switch (use Z as screensaver)
